# SysY-Compiler

./: .gitignore  README.md  ast.ml  compiler.ml  compiler.opam  context.ml  dune  dune-project  err.ml  lab1.ml  lab2.ml  lexer.mll  main.ml  main.native  package.opam  parser.conflicts  parser.mly  table.ml  test.lam  test.ml  test.sy  tree.ml  type.ml  typechecker.ml  util.ml
src/: ast.ml  compiler.opam  dune  dune-project  lab1.ml  lab2.ml  main.ml  parser.mly  test.sy  tree.ml  typechecker.ml
src/lib/: ast.ml  dune  err.ml  runtime.ml  tree.ml  type.ml
src/parser/: dune  lexer.mll  parser.mly
src/typechecker/: dune  table.ml  typechecker.ml  util.ml
tests/: README.md
tests/lab1/: add.sy
